--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: java
+dist: bionic
 
 matrix:
   include:
-    - jdk: openjdk8
-    - jdk: openjdk11
-  allow_failures:
     - jdk: openjdk11
 
 before_install:
